# Domotico

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  brutta.cpp  cmake_install.cmake  log1.txt  log2.txt  main  regex.txt
include/: cp.h  device.h  m.h  stime.h  system.h  time.h
src/: cp.cpp  device.cpp  m.cpp  main  main.cpp  stime.cpp  system.cpp  time.cpp
